--- a/eas.json
+++ b/eas.json
@@ -1,31 +1,20 @@
 {
-  "cli": {
-    "version": ">= 3.9.2"
-  },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "ios": {
-        "resourceClass": "m-medium"
+    "app": {
+      "android": {
+        "buildType": "apk",
+        "developmentClient": true,
+        "gradleCommand": ":app:assembleDebug"
       }
-    },
-    "preview": {
-      "distribution": "internal",
-        "android": {
-          "buildType": "apk"
-        } 
     },
     "preview2": {
       "android": {
-       "gradleCommand": ":app:assembleRelease" 
+        "gradleCommand": ":app:assembleDebug"
       }
     },
     "preview3": {
       "developmentClient": true
-    } 
-  },
-  "submit": {
+    },
     "production": {}
   }
 }
