--- a/eas.json
+++ b/eas.json
@@ -1,15 +1,13 @@
 {
   "build": {
-    "app": {
+    "preview": {
       "android": {
-        "buildType": "apk",
-        "developmentClient": true,
-        "gradleCommand": ":app:assembleDebug"
+        "buildType": "apk"
       }
     },
     "preview2": {
       "android": {
-        "gradleCommand": ":app:assembleDebug"
+        "gradleCommand": ":app:assembleRelease"
       }
     },
     "preview3": {
